# docs/swagger.json
@@ -2205,6 +2205,12 @@
                 "sort_order": {
                     "type": "integer"
                 },
+                "specs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_evrone_go-clean-template_internal_entity.ProductSpecItem"
+                    }
+                },
                 "status": {
                     "$ref": "#/definitions/github_com_evrone_go-clean-template_internal_entity.ProductStatus"
                 },
@@ -2219,6 +2225,17 @@
                 },
                 "visibility_level": {
                     "type": "integer"
+                }
+            }
+        },
+        "github_com_evrone_go-clean-template_internal_entity.ProductSpecItem": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
                 }
             }
         },
